# RBAC-demo

./: .gitignore  README.Md  console.py  console_interaction_handler.py  constants.py  main.py  pyproject.toml  requirements.txt  settings.py
action_types/: models.py
admin/: apis.py
base/: models.py
permissions/: models.py
resources/: apis.py  models.py
roles/: apis.py  models.py
users/: apis.py  models.py
